watermark overflow issue seems to be fixed

--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -176,3 +176,7 @@ a{
 html{
     margin-bottom: 60px;
 }
+
+html, body{
+    overflow-x: hidden;
+}
